# MEDS_TPPs

./: README.md  pyproject.toml
src/MEDS_TPPs/CIPPT/: conditionally_independent_model.py  config.py  fine_tuning_model.py  model_output.py  transformer.py  utils.py
src/MEDS_TPPs/configs/: default.yaml
src/MEDS_TPPs/configs/data/: default.yaml
src/MEDS_TPPs/configs/model/: default.yaml
src/MEDS_TPPs/configs/model/emission_head/: default.yaml
src/MEDS_TPPs/configs/model/input_embedder/: default.yaml
src/MEDS_TPPs/configs/model/sequence_model/: transformer.yaml
src/MEDS_TPPs/configs/model/temporal_position_embedder/: default.yaml
